[simi] refactor: Delete cluttered comments